src/snapshots/fetris__tests__srs_tests__srs_rotation_snap_j.snap
---
source: src/tests.rs
expression: "rotation_snap(PieceKind::J, make_srs_game)"
---
          0→1                        1→2                        2→3                        3→0           
  ┌────────────────────┐     ┌────────────────────┐     ┌────────────────────┐     ┌────────────────────┐
 0│- - - - - - - - - - │    0│- - - - - - - - - - │    0│- - - - - - - - - - │    0│- - - - - - - - - - │
  │                    │     │                    │     │                    │     │                    │
  │                    │     │                    │     │                    │     │                    │
  │                    │     │                    │     │                    │     │                    │
  │                    │     │                    │     │                    │     │                    │
 5│- - - - - - - - - - │    5│- - - - - - - - - - │    5│- - - - - - - - - - │    5│- - - - - - - - - - │
  │                    │     │                    │     │                    │     │                    │
  │                    │     │                    │     │                    │     │                    │
  │      '.[][]        │     │        '.'.        │     │        []          │     │      []'.          │
  │      '.[]'.        │     │      [][][]        │     │      '.[]'.        │     │      [][][]        │
10│- - - - []- - - - - │   10│- - - - '.[]- - - - │   10│- - - [][]'.- - - - │   10│- - - '.'.- - - - - │
  │                    │     │                    │     │                    │     │                    │
  │                    │     │                    │     │                    │     │                    │
  │                    │     │                    │     │                    │     │                    │
  │                    │     │                    │     │                    │     │                    │
15│- - - - - - - - - - │   15│- - - - - - - - - - │   15│- - - - - - - - - - │   15│- - - - - - - - - - │
  │                    │     │                    │     │                    │     │                    │
  │                    │     │                    │     │                    │     │                    │
  │                    │     │                    │     │                    │     │                    │
  │                    │     │                    │     │                    │     │                    │
20└────────────────────┘   20└────────────────────┘   20└────────────────────┘   20└────────────────────┘
