src/snapshots/fetris__tests__srs_tests__srs_wall_kick_snap_l.snap
---
source: src/tests.rs
expression: "wall_kick_snap(PieceKind::L, make_srs_game)"
---
         L↻ 1→2                     L↺ 1→0                     R↻ 3→0                     R↺ 3→2         
  ┌────────────────────┐     ┌────────────────────┐     ┌────────────────────┐     ┌────────────────────┐
 0│- - - - - - - - - - │    0│- - - - - - - - - - │    0│- - - - - - - - - - │    0│- - - - - - - - - - │
  │                    │     │                    │     │                    │     │                    │
  │                    │     │                    │     │                    │     │                    │
  │                    │     │                    │     │                    │     │                    │
  │                    │     │                    │     │                    │     │                    │
 5│- - - - - - - - - - │    5│- - - - - - - - - - │    5│- - - - - - - - - - │    5│- - - - - - - - - - │
  │                    │     │                    │     │                    │     │                    │
  │                    │     │                    │     │                    │     │                    │
  │'.                  │     │'.  []              │     │                '.[]│     │                '.'.│
  │[][][]              │     │[][][]              │     │              [][][]│     │              [][][]│
10│[]'.- - - - - - - - │   10│'.'.- - - - - - - - │   10│- - - - - - - - - '.│   10│- - - - - - - []- '.│
  │                    │     │                    │     │                    │     │                    │
  │                    │     │                    │     │                    │     │                    │
  │                    │     │                    │     │                    │     │                    │
  │                    │     │                    │     │                    │     │                    │
15│- - - - - - - - - - │   15│- - - - - - - - - - │   15│- - - - - - - - - - │   15│- - - - - - - - - - │
  │                    │     │                    │     │                    │     │                    │
  │                    │     │                    │     │                    │     │                    │
  │                    │     │                    │     │                    │     │                    │
  │                    │     │                    │     │                    │     │                    │
20└────────────────────┘   20└────────────────────┘   20└────────────────────┘   20└────────────────────┘
